--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>test</title>
   </head>
   <body>
-    <div classname="font-sans" id="root"></div>
+    <div className="font-sans" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
